--- a/tp3/src/main/webapp/index.html
+++ b/tp3/src/main/webapp/index.html
@@ -10,6 +10,7 @@
 <form method="post" action="connect">
     <p>
         Connectez-vous pour pouvoir utiliser l'application :<br>
+        <input type='hidden' name='operation' value='connect'>
         <label>Login : <input type="text" name="login"></label><br>
         <label>Prénom : <input type="text" name="name"></label><br>
         <input type="submit" value="Connexion">
