début cache, 3.1.2  Modifications qui seront validées : 	nouveau fichier : tp3/src/main/java/fr/univlyon1/m1if/m1if03/filters/Cache.java 	modifié :         tp3/src/main/webapp/WEB-INF/web.xml 	modifié :         tp3/src/main/webapp/index.html

--- a/tp3/src/main/webapp/index.html
+++ b/tp3/src/main/webapp/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Bienvenue sur MIF TODOs</h1>
-<form method="post" action="connect?operation=connect">
+<form method="post" action="connect">
     <p>
         Connectez-vous pour pouvoir utiliser l'application :<br>
         <input type='hidden' name='operation' value='connect'>
