Commit pour début de AJAX Changes to be committed: 	modified:   ../../tp5/src/main/webapp/index.html 	modified:   ../../tp5/src/main/webapp/js/spa.js

--- a/tp5/src/main/webapp/index.html
+++ b/tp5/src/main/webapp/index.html
@@ -18,7 +18,7 @@
     <h1 class="header-titre">MIF-TODOS</h1>
     <div class="wrapper">
         <p class="header-user requiresConnection" id="target_header"><strong> Loading...</strong></p>
-        <script id="template_header" type="x-tmpl-mustache">Bonjour {{ name }}!</script>
+        <script id="template_header" type="x-tmpl-mustache">Bonjour {{ login }}!</script>
         <p class="header-deco requiresConnection"><a href='#deco'>Déconnexion</a></p>
     </div>
     <!--
@@ -97,7 +97,7 @@
             <div>Assigné à :
                 <ul>
                     {{#todos}}
-                        <li><a href="#todoList/{{.}}">todos/{{.}}</a></li>
+                        <li><a href="#todoList/{{id}}">{{name}}</a></li>
                     {{/todos}}
                 </ul>
             </div>
@@ -107,8 +107,11 @@
            -->
 
         <section id='todoList' class='inactive'>
+            <div id="target_todoList"></div>
+        </section>
+        <script id="template_todoList" type="x-tmpl-mustache">
             <h2><strong>Liste des todos</strong></h2>
-            <p>Il y a actuellement <strong>...</strong> todo(s).</p>
+            <p>Il y a actuellement <strong>{{todos.length}}</strong> todo(s).</p>
             <!--
                 TODO afficher le nombre de todos
             -->
@@ -121,34 +124,15 @@
                     <th></th>
                     <th></th>
                 </tr>
-                <tr class="special">
-                    <td>&#x2611;</td>
-                    <td>Titre du premier todo</td>
-                    <td><a href="#user/toto">Toto</a></td>
-                    <td><button type="button" class="btn btn-secondary" id="idTodo1_removeUser_button">Me retirer ce todo</button></td>
-                    <td><button type="button" class="btn btn-secondary" id="idTodo1_removeTodo_button">Supprimer ce todo</button></td>
-                </tr>
-                <tr>
-                    <td>&#x2610;</td>
-                    <td>Titre du deuxième todo</td>
-                    <td><a href="#user/titi">Titi</a></td>
-                    <td><button type="button" class="btn btn-secondary" id="idTodo2_assignUser_button">M'attribuer ce todo</button></td>
-                    <td><button type="button" class="btn btn-secondary" id="idTodo2_removeTodo_button">Supprimer ce todo</button></td>
-                </tr>
-                <tr class="special">
-                    <td>&#x2610;</td>
-                    <td>Titre du troisième todo</td>
-                    <td><a href="#user/toto">Toto</a></td>
-                    <td><button type="button" class="btn btn-secondary" id="idTodo3_removeUser_button">Me retirer ce todo</button></td>
-                    <td><button type="button" class="btn btn-secondary" id="idTodo3_removeTodo_button">Supprimer ce todo</button></td>
-                </tr>
-                <tr>
-                    <td>&#x2610;</td>
-                    <td>Titre du quatrième todo</td>
-                    <td></td>
-                    <td><button type="button" class="btn btn-secondary" id="idTodoN_assignUser_button">M'attribuer ce todo</button></td>
-                    <td><button type="button" class="btn btn-secondary" id="idTodoN_removeTodo_button">Supprimer ce todo</button></td>
-                </tr>
+                {{#todos}}
+                    <tr class="special">
+                        <td>{{image}}</td>
+                        <td>{{name}}</td>
+                        <td><a href="#user/{{assignee}}">{{assignee}}</a></td>
+                        <td><button type="button" class="btn btn-secondary" id="idTodo1_removeUser_button">Me retirer ce todo</button></td>
+                        <td><button type="button" class="btn btn-secondary" id="idTodo1_removeTodo_button">Supprimer ce todo</button></td>
+                    </tr>
+                {{/todos}}
             </table>
             </div>
             <!--
@@ -169,7 +153,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </script>
     </article>
 </div>
 
