--- a/tp5/src/main/webapp/index.html
+++ b/tp5/src/main/webapp/index.html
@@ -126,11 +126,15 @@
                 </tr>
                 {{#todos}}
                     <tr class="special">
-                        <td>{{image}}</td>
+                        <td>{{{image}}}</td>
                         <td>{{title}}</td>
-                        <td>{{name}}</td>
                         <td><a href="#user/{{assignee}}">{{assignee}}</a></td>
-                        <td><button type="button" class="btn btn-secondary" id="idTodo1_removeUser_button">Me retirer ce todo</button></td>
+                        {{#userIsAssignee}}
+                            <td><button type="button" class="btn btn-secondary" id="idTodo1_removeUser_button">Me retirer ce todo</button></td>
+                        {{/userIsAssignee}}
+                        {{^userIsAssignee}}
+                            <td><button type="button" class="btn btn-secondary" id="idTodo1_assignUser_button">M'attribuer ce todo</button></td>
+                        {{/userIsAssignee}}
                         <td><button type="button" class="btn btn-secondary" id="idTodo1_removeTodo_button">Supprimer ce todo</button></td>
                     </tr>
                 {{/todos}}
