--- a/tp5/src/main/webapp/index.html
+++ b/tp5/src/main/webapp/index.html
@@ -97,7 +97,7 @@
             <div>Assigné à :
                 <ul>
                     {{#todos}}
-                        <li><a href="#todoList/{{id}}">{{title}}</a></li>
+                        <li><a href="#todoList/{{hash}}">{{title}}</a></li>
                     {{/todos}}
                 </ul>
             </div>
@@ -132,16 +132,23 @@
                         {{^userIsAssignee}}
                         {{/userIsAssignee}}
                     >
+
+                        {{#userIsAssignee}}
+                        <td onclick="changeStatus({{hash}})">{{{image}}}</td>
+                        {{/userIsAssignee}}
+                        {{^userIsAssignee}}
                         <td>{{{image}}}</td>
+                        {{/userIsAssignee}}
+
                         <td>{{title}}</td>
                         <td><a href="#user/{{assignee}}">{{assignee}}</a></td>
                         {{#userIsAssignee}}
-                            <td><button type="button" class="btn btn-secondary" id="idTodo1_removeUser_button">Me retirer ce todo</button></td>
+                            <td><button type="button" class="btn btn-secondary" id="idTodo1_removeUser_button" onclick="changeAssignee({{hash}})">Me retirer ce todo</button></td>
                         {{/userIsAssignee}}
                         {{^userIsAssignee}}
-                            <td><button type="button" class="btn btn-secondary" id="idTodo1_assignUser_button">M'attribuer ce todo</button></td>
+                            <td><button type="button" class="btn btn-secondary" id="idTodo1_assignUser_button" onclick="changeAssignee({{hash}}, {{name}})">M'attribuer ce todo</button></td>
                         {{/userIsAssignee}}
-                        <td><button type="button" class="btn btn-secondary" id="idTodo1_removeTodo_button">Supprimer ce todo</button></td>
+                        <td><button type="button" class="btn btn-secondary" id="idTodo1_removeTodo_button" onclick="deleteTodo({{hash}})">Supprimer ce todo</button></td>
                     </tr>
                 {{/todos}}
             </table>
